--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 	L.marker([51.5, -0.09]).addTo(mymap)
 		.bindPopup("<b>Hello world!</b><br />I am a popup.").openPopup();
 
-	L.circle([51.508, -0.11], 500, {
-		color: 'red',
+	L.circle([51.4999307,-0.3050284], 300, {
+		color: 'blue',
 		fillColor: '#f03',
 		fillOpacity: 0.5
 	}).addTo(mymap).bindPopup("I am a circle.");
