--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		.bindPopup("<b>Hello world!</b><br />I am a popup.").openPopup();
 
 	L.circle([51.4999307,-0.3050284], 300, {
-		color: 'blue',
+		// color: 'blue',
 		fillColor: '#f03',
 		fillOpacity: 0.5
 	}).addTo(mymap).bindPopup("I am a circle.");
